# professor-marbles

./: rule.html
make-problem/: CMakeLists.txt  game.h  main.cpp  problem_maker.h  solver.h
professor-marbles/: .eslintrc.js  README.md  package-lock.json  package.json
professor-marbles/public/: index.css
professor-marbles/src/: App.vue
professor-marbles/src/components/: TestTube.vue  TestTubeCell.vue  TestTubes.vue
professor-marbles/src/models/: game.js  utility.js
question-checker/: check_question.py
question-maker-sample/: make_question.py  question-02.txt
rule/src/: index.md
sample-question-maker/: make_question.py  question-01.txt  question-03.txt  question-04.txt  requirements.txt
sample-solver/: answer-01.txt  solve.py
solver-sample/: answer-02.txt  solve.py
web/: _b  breadth-first-search.md  depth-first-search.md  figure.odp  rule.md
